Fix: On the shopping cart screen of the Android terminal, the volume increase / decrease button has caused the layout collapse

--- a/html/template/default/assets/scss/mixins/media.scss
+++ b/html/template/default/assets/scss/mixins/media.scss
@@ -7,7 +7,11 @@ SP フォーストで記述する。
 Twitter Bootstrap デフォルト準拠
  */
 
-
+@mixin media_phone() {
+  @media only screen and (max-width: 410px) {
+    @content
+  }
+}
 
 //@mixin media_tablet(){
 //  @media only screen and (min-width: 768px) {
